@@ -1,4 +1,11 @@
 ====================
+2021/1/14
+
+- Fixed GUIWatcher::OnEvent() blocking event passback.
+- Added GUIWatcher::bringToFront() to allow inserting GUIWatcher between element and its parent.
+
+
+====================
 2020/5
 
 - Added cubr_image.h and cubr_image.cpp
